--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -6,7 +6,14 @@ body {
 }
 
 #unity-container {
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    /* Horizontal center */
+    align-items: center;
+    /* Vertical center */
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 #unity-container.unity-desktop {
